--- a/grui2/style2.css
+++ b/grui2/style2.css
@@ -207,7 +207,7 @@ color: white;/*#00DB00;*/
 margin-left: 187px;
 padding: 1em;
 max-width: 37em;
-/*border-left: 2px solid red;*/
+border-left: 3px solid #383858;
 background-color: black; /*#383858; black;*/
 }
 
