made empty trades possible fixed css
Signed-off-by: thename151 <thename151@yahoo.com>

--- a/grui2/style2.css
+++ b/grui2/style2.css
@@ -206,7 +206,7 @@ color: white;
 color: white;/*#00DB00;*/
 margin-left: 187px;
 padding: 1em;
-max-width: 37em;
+/*max-width: 37em;*/
 border-left: 3px solid #383858;
 background-color: black; /*#383858; black;*/
 }
