--- a/grui2/style2.css
+++ b/grui2/style2.css
@@ -1,3 +1,4 @@
+
 #t3
 {
 	width:33%;
@@ -10,7 +11,7 @@
 	float:auto;
 }  
 
-#myText { text-align: right; } 
+#myText { text-align:right; } 
 
 #t1, #t2
 {
@@ -167,6 +168,7 @@ background-color: black;
 float: left;
 width: 200px;
 margin: 0;
+border-right: 3px solid #383858;
 padding: 1em;
 }
 
@@ -191,8 +193,8 @@ border-right: 3px solid #383858;
 {
 margin-left: 232px;
 padding: 1em;
-max-width: 37em;
-border-left: 2px solid #383858;
+/*max-width: 37em;*/
+border-left: 3px solid #383858;
 background-color: black;
 }
 /*
