added light css style
Signed-off-by: thename151 <thename151@yahoo.com>

--- a/grui2/style-dark.css
+++ b/grui2/style-dark.css
@@ -251,7 +251,7 @@ background-color: black;
 #contentblank
 {
 padding: 1em;
-border: 2px solid black;
+border: 2px solid white;
 background-color: black;
 }
 
