--- a/grui2/style-dark.css
+++ b/grui2/style-dark.css
@@ -235,6 +235,7 @@ border-right: 3px solid #383858;
 color: white;/*#00DB00;*/
 margin-left: 187px;
 padding: 1em;
+padding-bottom: 1.5em;
 /*max-width: 37em;*/
 border-left: 3px solid #383858;
 background-color: black; /*#383858; black;*/
