--- a/grui2/style-light.css
+++ b/grui2/style-light.css
@@ -243,8 +243,10 @@ color: white;
 color: black;/*#00DB00;*/
 margin-left: 187px;
 padding: 1em;
+padding-bottom: 1.5em;
 /*max-width: 37em;*/
 border-left: 3px solid #383858;
+/*border-left: 3px solid gold;*/
 background-color: white; /*#383858; black;*/
 }
 
@@ -266,7 +268,7 @@ background-color: white;
 #footer
 {
 	color:white;
-	clear: both;
+	clear: both; 
 	margin: 0;
 	padding: .5em;
 	background-color: #383858; 
